fix: coll. spread hide and position seller shift

--- a/src/components/Synthetics/PositionSeller/PositionSeller.scss
+++ b/src/components/Synthetics/PositionSeller/PositionSeller.scss
@@ -8,6 +8,10 @@
 
 .PositionSeller-modal {
   overflow-x: hidden;
+
+  .Modal-content {
+    top: 10%;
+  }
 }
 
 .PositionSeller-info-box {
